--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
 sources:
   1.1.0.tar.gz: f300dd46782a0146b817ce5f99aac2537e9edda2
+  1.4.2.tar.gz: 88cd12b4e3e3a73a39a4482fec2b1bd8c8548003
+  pegdown-1.4.2.pom: 5c4a105e0ae7024c2e5e4d34eaa265ad17e82916
